<resources>
    <string name="app_name">MinilemonSpaceApp</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="text_login">Login</string>
    <string name="dont_have">don’t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
</resources>